# djangotemplate

./: env.example  manage.py  pyproject.toml
djangotemplate/: asgi.py  settings.py  urls.py  wsgi.py
user/: urls.py
user/migrations/: 0001_initial.py
user/models/: __init__.py  user.py
user/serializers/: __init__.py  user_serializer.py
user/views/: __init__.py  user_viewset.py
